v3/dev/infrastructure/networking/ingress/templates/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai
  namespace: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  externalIPs:
    - 10.30.2.3
