v3/dev/infrastructure/networking/ingress/templates/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /\.env { deny all; return 404; }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev3.nemo.ai.kr
      secretName: dev-nemo-tls 
  rules:
    - host: dev3.nemo.ai.kr
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-ui/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /v3/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /swagger-resources/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /ai/v2/chatbot/
            pathType: Prefix
            backend:
              service:
                name: ai
                port:
                  number: 8000
            annotations:
              nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
              nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
          - path: /api/v2/groups/recommendations/chatbot/stream
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
            annotations:
              nginx.ingress.kubernetes.io/proxy-buffering: "off"
              nginx.ingress.kubernetes.io/configuration-snippet: |
                add_header Cache-Control no-cache;
                add_header Content-Type text/event-stream;
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: ai
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
